<resources>
    <string name="app_name">Shared</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cb_estado_tarea">Estado Tarea</string>
    <string name="titulo_de_la_tarea">Tìtulo de la Tarea</string>
    <string name="descripcion">Descripcion</string>
    <string name="fecha">Fecha</string>
    <string name="prioridad">Prioridad</string>
    <string name="estado_tarea">Estado Tarea</string>
    <string name="guardar">Guardar</string>
</resources>